RESOLVED FIXED64975
Column spans and multi-column elements should not collapse margins with their children
https://bugs.webkit.org/show_bug.cgi?id=64975
Summary Column spans and multi-column elements should not collapse margins with their...
Dave Hyatt
Reported 2011-07-21 14:00:21 PDT
Column spans and multi-column elements should establish block formatting contexts. They mostly do except for the part where they should not be collapsing margins with their children. This bug is about fixing the margin collapsing issue.
Attachments
Patch (1.72 KB, patch)
2011-07-21 14:02 PDT, Dave Hyatt
bdakin: review+
Dave Hyatt
Comment 1 2011-07-21 14:02:30 PDT
Dave Hyatt
Comment 2 2011-07-21 14:17:11 PDT
Fixed in r91497. A bunch of multicol tests will need to be rebaselined. I'm on Lion so can't do SL.
Philippe Wittenbergh
Comment 3 2011-07-22 18:19:22 PDT
Should '-webkit-column-count:0' establish a block formatting context and prevent margin-collapse through ? It does with the latest nightly (r91611) on Snow leopard. The spec says: "Values must be greater than 0" http://dev.w3.org/csswg/css3-multicol/#cc Opera 11.5 does not establish a BFC - the margins of the child element collapse through (unless of course the multi-col element has a border) testcase: http://dev.l-c-n.com/CSS3/multi-col/multicol-bfc3.html
Note You need to log in before you can comment on or make changes to this bug.