https://bugs.webkit.org/show_bug.cgi?id=64975 Elements that have columns (e.g., column-width or column-count non-auto) and elements that have column-spans establish block formatting contexts, and therefore they should not be allowing child margins to collapse with their own margins.

Reviewed by Beth Dakin.

Covered by existing tests.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::MarginInfo::MarginInfo):



Canonical link: https://commits.webkit.org/80716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91497 268f45cc-cd09-0410-ab3c-d52691b4dbfc